--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,9 @@
   </head>
   <body>
     <!-- Write your HTML code here, you can delete everything withing the body tags -->
-    <div class="container-fluid text-center">
-      <p id="excusa">Generador de excusas</p>
+    
+    <div class="container">
+      <p id="excusa"></p>
     </div>
 
     <!-- Do not delete this script tag, this is what connects your HTML with the Javascript code -->
